Fixes the spacing of mage ability.

--- a/app/assets/stylesheets/mages.scss
+++ b/app/assets/stylesheets/mages.scss
@@ -14,3 +14,7 @@
 .mage-info > section {
   margin-top: 10px;
 }
+
+.mage-ability {
+  white-space: pre-line;
+}
